--- a/math3/hw1/main.tex
+++ b/math3/hw1/main.tex
@@ -95,7 +95,7 @@ Fix \(x^0=(x_1^0,x_2^0)\). Fix \(\varepsilon>0\). We want to find a delta that m
    |f(x)-f(x^0)| &< \varepsilon \\
 \end{align*}
 
-We are gonna find a relation between delta and \(|f(x)-f(x^0)|\) and from there we are look for values of delta where it is
+We are gonna find a relation between delta and \(|f(x)-f(x^0)|\) and from there we are gonna look for values of delta where it is
 less than epsilon.
 
 \begin{align*}
