--- a/math3/hw2/main.tex
+++ b/math3/hw2/main.tex
@@ -187,4 +187,47 @@ The fradient is simply the vector of partial derivatives which we just calculate
    \end{pmatrix}
 \end{align*}
 
+\section*{Problem 7}
+We are given the function
+\begin{align*}
+   f : \mathbb{R}^2 \to \mathbb{R}, \quad f(x_1, x_2) :=
+   \begin{cases}
+      (x_1^2 + x_2^2) \sin\left(\frac{1}{x_1^2 + x_2^2}\right), & (x_1, x_2) \neq (0, 0) \\
+      0, & (x_1, x_2) = (0, 0)
+   \end{cases}
+\end{align*}
+
+\subsection*{(i)}
+We want to show that \(f\) is partially differentiable. \\
+Lets start with \(\frac{\partial f}{\partial x_1}\):
+\begin{align*}
+   \frac{\partial f}{\partial x_1} &= \frac{df_{x_2}}{dx_1} \\
+   \intertext{where}
+   f_{x_2}(x_1) &= f(x_1, x_2) = (x_1^2 + x_2^2) \sin\left(\frac{1}{x_1^2 + x_2^2}\right)
+\end{align*}
+And \(f_{x_2}\) is differentiable for all \(x_1 \in \mathbb{R}\) because it is a product of differentiable functions. \\
+\\
+Now we want to show that \(\frac{\partial f}{\partial x_2}\):
+\begin{align*}
+   \frac{\partial f}{\partial x_2} &= \frac{df_{x_1}}{dx_2} \\
+   \intertext{where}
+   f_{x_1}(x_2) &= f(x_1, x_2) = (x_1^2 + x_2^2) \sin\left(\frac{1}{x_1^2 + x_2^2}\right)
+\end{align*}
+And the same thing as above applies here because of the symmetry of the function. \\
+Now we need to check the point \((0,0)\):
+\begin{align*}
+   \frac{\partial f}{\partial x_1} &= \lim_{h \to 0} \frac{f(0 + h, 0) - f(0, 0)}{h} \\
+   &= \lim_{h \to 0} \frac{h^2 \sin\left(\frac{1}{h^2}\right) - 0}{h} \\
+   &= \lim_{h \to 0} h \sin\left(\frac{1}{h^2}\right) \\
+   &= 0 \\
+\end{align*}
+\begin{align*}
+   \frac{\partial f}{\partial x_2} &= \lim_{h \to 0} \frac{f(0, 0 + h) - f(0, 0)}{h} \\
+   &= \lim_{h \to 0} \frac{h^2 \sin\left(\frac{1}{h^2}\right) - 0}{h} \\
+   &= \lim_{h \to 0} h \sin\left(\frac{1}{h^2}\right) \\
+   &= 0 \\
+\end{align*}
+
+So we have shown that \(f\) is partially differentiable everywhere.
+
 \end{document}
