--- a/math3/hw2/main.tex
+++ b/math3/hw2/main.tex
@@ -230,6 +230,45 @@ Now we need to check the point \((0,0)\):
 
 So we have shown that \(f\) is partially differentiable everywhere.
 
+\subsection*{(ii)}
+We want to show that \(f\) is totally differentiable at point \((0,0)\). \\
+So we are going to show that jacobian matrix exists at point \((0,0)\) and the limit condition holds. \\
+Limit condition is:
+\begin{align*}
+   \lim_{(h_1, h_2) \to (0,0)} \frac{f(0 + h_1, 0 + h_2) - f(0,0) - J_f(0,0) \cdot (h_1, h_2)^T}{\|(h_1, h_2)\|} = 0
+\end{align*}
+
+Jacobian matrix is:
+\begin{align*}
+   J_f = \begin{pmatrix}
+      \frac{\partial f}{\partial x_1} & \frac{\partial f}{\partial x_2}
+   \end{pmatrix}
+\end{align*}
+
+we are interested in \(J_f(0,0)\):
+\begin{align*}
+   J_f(0,0) = \begin{pmatrix}
+      0 & 0
+   \end{pmatrix}
+\end{align*}
+Values we calculated in (i). \\
+Now we can calculate the limit: \\
+Case: \((h_1, h_2) \neq (0,0)\)
+\begin{align*}
+   &\lim_{(h_1, h_2) \to (0,0)} \frac{f(0 + h_1, 0 + h_2) - f(0,0) - J_f(0,0) \cdot (h_1, h_2)^T}{\|(h_1, h_2)\|} \\
+   &= \lim_{(h_1, h_2) \to (0,0)} \frac{(h_1^2 + h_2^2) \sin\left(\frac{1}{h_1^2 + h_2^2}\right) - 0 - 0}{\sqrt{h_1^2 + h_2^2}} \\
+   &= \lim_{(h_1, h_2) \to (0,0)} \sqrt{h_1^2 + h_2^2} \sin\left(\frac{1}{h_1^2 + h_2^2}\right) \\
+   &= 0
+\end{align*}
+
+Case: \((h_1, h_2) = (0,0)\)
+\begin{align*}
+   &\lim_{(h_1, h_2) \to (0,0)} \frac{f(0 + h_1, 0 + h_2) - f(0,0) - J_f(0,0) \cdot (h_1, h_2)^T}{\|(h_1, h_2)\|} \\
+   &= \lim_{(h_1, h_2) \to (0,0)} \frac{0 - 0 - 0}{0} \\
+   &= 0
+\end{align*}
+So the limit condition holds and \(f\) is totally differentiable at point \((0,0)\). Thats what we wanted to show.
+
 \section*{Problem 8}
 
 We are given the function
