--- a/math3/hw2/main.tex
+++ b/math3/hw2/main.tex
@@ -303,6 +303,12 @@ We are given the function
    \end{cases}
 \end{align*}
 
+\subsection*{(i)}
+We want to show that \(f\) is twice continuously differentiable at any point \(x = (x_1, x_2) \in \mathbb{R}^2 \setminus \{(0, 0)\}\) and determine the Hessian matrix of \(f\) at \(x\). \\
+Since \(f\) is a rational function where the numerator and denominator are polynomials and the denominator is never zero for any point \(x \in \mathbb{R}^2 \setminus \{(0, 0)\}\)
+we can take the derivate of a a polynomial function infinitely many times and the result will still be a polynomial function. And also the combination of polynomial functions (addition, subtraction, multiplication, division) are also polynomial functions. \\
+Thus \(f\) is twice continuously differentiable at any point \(x = (x_1, x_2) \in \mathbb{R}^2 \setminus \{(0, 0)\}\). \\
+
 \subsection*{(ii)}
 We need to show that the PD condition holds for \(f\). \(PD_{(0,0) (i,j)}\) for \(i,j \in \{1,2\}\). \\
 Lets start with \(PD_{(0,0) (1,1)}\):
