--- a/math3/hw3/main.tex
+++ b/math3/hw3/main.tex
@@ -132,6 +132,48 @@ which also converges to \( 0 \). \\
 Thats what we wanted to show.
 
 \subsection*{(ii)}
+We need to show that the following limit doesnt converge to zero
+\begin{align*}
+   \lim_{x \to 0} \frac{f(x) - f(0) - Jf(0)x}{\|x\|}
+\end{align*}
+The J is the Jacobian matrix. \\
+\begin{align*}
+   J = \begin{bmatrix}
+      \frac{\partial f}{\partial x_1} & \frac{\partial f}{\partial x_2}
+   \end{bmatrix}
+\end{align*}
 
+Lets compute the partials at (0, 0) \\
+\begin{align*}
+   \frac{\partial f}{\partial x_1}(0, 0) &= \lim_{h \to 0} \frac{f(h, 0) - f(0, 0)}{h} = \lim_{h \to 0} \frac{0 - 0}{h} = 0 \\
+   \frac{\partial f}{\partial x_2}(0, 0) &= \lim_{h \to 0} \frac{f(0, h) - f(0, 0)}{h} = \lim_{h \to 0} \frac{0 - 0}{h} = 0
+\end{align*}
+
+Thus, the Jacobian matrix at (0, 0) is:
+\begin{align*}
+   Jf(0, 0) = \begin{bmatrix}
+      0 & 0
+   \end{bmatrix}
+\end{align*}
+
+Substituting this into our limit we get
+\begin{align*}
+   \lim_{x \to 0} \frac{f(x) - f(0)}{\|x\|}
+\end{align*}
+
+We also know that \( f(0) = 0 \), so we can simplify this to:
+\begin{align*}
+   \lim_{x \to 0} \frac{f(x)}{\|x\|}
+\end{align*}
+So it is enough if i can show a vector \(x\) where this limit is not zero. \\
+Lets choose \( x = (x_1, x_1) \). Then we have:
+\begin{align*}
+   \lim_{x_1 \to 0} \frac{f(x_1, x_1)}{\|(x_1, x_1)\|} &= \lim_{x_1 \to 0} \frac{\frac{x_1^2 x_1}{x_1^2 + x_1^2}}{\sqrt{x_1^2 + x_1^2}} \\
+   &= \lim_{x_1 \to 0} \frac{\frac{x_1^3}{2x_1^2}}{\sqrt{2} |x_1|} \\
+   &= \lim_{x_1 \to 0} \frac{x_1}{2\sqrt{2} |x_1|} \\
+   &= \lim_{x_1 \to 0} \frac{1}{2\sqrt{2}} \cdot \frac{x_1}{|x_1|}
+\end{align*}
+This limit doesnt even exist so it cant be equal to zero. \\
+Thats what we wanted to show.
 
 \end{document}
