--- a/math3/hw3/main.tex
+++ b/math3/hw3/main.tex
@@ -212,4 +212,7 @@ Thus, all partial derivatives of \(f\) exist and are continuous. \\
 (we can explicitly use the remark 1.3.13 in lecture notes to prove continuity but thats trivial so i cut it short with one sentence. Can i cut it short like this in the exam?) \\
 Thats what we wanted to show.
 
+\subsection*{(ii)}
+Yes it is because we know that continuously partially differentiability implies total differentiability. In (i) we showed that \(f\) is continuously partially differentiable function.
+
 \end{document}
